# redact

./: .prettierignore  .prettierrc.json  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: continuous-integration.yaml
docs/: 404.html  index.html
docs/404/: index.html
docs/500/: index.html
docs/_next/static/02F0FnMhfwxGWftigoIsb/: _buildManifest.js
docs/_next/static/1mEt0T8P8UwK7fsbcDMc1/: _buildManifest.js
docs/_next/static/F9jhoN-fZSVDIvarXUTzD/: _buildManifest.js
docs/_next/static/J0Ixy3skQ81mqJd7XMvLr/: _buildManifest.js
docs/_next/static/chunks/: 0c3830c3.7f451b9a0c2ef236.js  0c3830c3.ac282303b79d4ff4.js  11bb9bbd.18d89e07d612c915.js  140.5be601fe2e8168b7.js  140.72a48317d8ea7111.js  140.872dc4255def35ff.js  362.e3abf63a653b05ac.js  465.d36fe4721da102fb.js  488.90fd974e92be0547.js  497.926061285ddf8321.js  547.fa76fd756d0e9c72.js  708.44b165384bdbfc77.js  864-4dc0078801029729.js  98.1ab08314ad5c7200.js  98.71e316f297c4abc7.js  framework-15b5094acd82fa38.js  framework-8cbac73f18ffcbf3.js  main-5ec4208a360bb626.js  main-9f1b90972ecd41d5.js  polyfills-42372ed130431b0a.js  webpack-2962c9be4def5e71.js  webpack-2aa6e984625255b7.js  webpack-70807a391bfbc37c.js  webpack-758b8f6aeb88cf4c.js  webpack-b23f9dd99e9bd52c.js  (+3 more)
docs/workers/: pdf.worker.min.js
public/workers/: pdf.worker.min.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Features.tsx  Footer.tsx  Home.tsx  Navbar.tsx
src/constants/: index.ts
src/pages/: 404.tsx  500.tsx  _app.tsx  index.tsx
src/styles/: globals.css
(+22 files in other folders)
