[package]
name = "Redact"
version = "0.0.1"
description = "PDF Redact"
authors = ["hieudoanm <hieumdoan@gmail.com> (https://hieudoanm.github.io/)"]
license = "GPL-3.0"
repository = "https://github.com/hieudoanm/redact"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
